// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server GET /v2/swaps/:id retrieves a swap from a native swap id 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SWAPPING",
  "swap": {
    "fees": [
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
    ],
    "isDca": false,
    "retryCount": 0,
    "scheduledAt": 552000,
    "scheduledBlockIndex": "92-399",
    "swapInputAmount": "4999949999999650000",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap from a vault origin 1`] = `
{
  "deposit": {
    "amount": "4999949999999650000",
    "txRef": "0xb2dcb9ce8d50f0ab869995fee8482bcf304ffcfe5681ca748f90e34c0ad7b241",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SWAPPING",
  "swap": {
    "executedAt": 564000,
    "executedBlockIndex": "94-594",
    "fees": [
      {
        "amount": "4556242",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "4999949999999650",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "4506169",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "45516860",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "BROKER",
      },
    ],
    "isDca": false,
    "retryCount": 0,
    "scheduledAt": 552000,
    "scheduledBlockIndex": "92-399",
    "swapInputAmount": "4999949999999650000",
    "swapOutputAmount": "4192904666034",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap from a vault origin in COMPLETED 1`] = `
{
  "deposit": {
    "amount": "4999949999999650000",
    "txRef": "0xb2dcb9ce8d50f0ab869995fee8482bcf304ffcfe5681ca748f90e34c0ad7b241",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "COMPLETED",
  "swap": {
    "executedAt": 564000,
    "executedBlockIndex": "94-594",
    "fees": [
      {
        "amount": "4556242",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "4999949999999650",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "4506169",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "45516860",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "BROKER",
      },
      {
        "amount": "197450000",
        "asset": "DOT",
        "chain": "Polkadot",
        "type": "EGRESS",
      },
    ],
    "isDca": false,
    "retryCount": 0,
    "scheduledAt": 552000,
    "scheduledBlockIndex": "92-399",
    "swapInputAmount": "4999949999999650000",
    "swapOutputAmount": "4192904666034",
  },
  "swapEgress": {
    "amount": "4192707216034",
    "confirmedAt": 624000,
    "confirmedBlockIndex": "104-7",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
    "txRef": "104-2",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap in COMPLETED status 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "COMPLETED",
  "swap": {
    "executedAt": 564000,
    "executedBlockIndex": "94-594",
    "fees": [
      {
        "amount": "4556242",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "4999949999999650",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "4506169",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "45516860",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "BROKER",
      },
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "197450000",
        "asset": "DOT",
        "chain": "Polkadot",
        "type": "EGRESS",
      },
    ],
    "isDca": false,
    "retryCount": 0,
    "scheduledAt": 552000,
    "scheduledBlockIndex": "92-399",
    "swapInputAmount": "4999949999999650000",
    "swapOutputAmount": "4192904666034",
  },
  "swapEgress": {
    "amount": "4192707216034",
    "confirmedAt": 624000,
    "confirmedBlockIndex": "104-7",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
    "txRef": "104-2",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap in SENDING status 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SENDING",
  "swap": {
    "executedAt": 564000,
    "executedBlockIndex": "94-594",
    "fees": [
      {
        "amount": "4556242",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "4999949999999650",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "4506169",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "45516860",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "BROKER",
      },
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "197450000",
        "asset": "DOT",
        "chain": "Polkadot",
        "type": "EGRESS",
      },
    ],
    "isDca": false,
    "retryCount": 0,
    "scheduledAt": 552000,
    "scheduledBlockIndex": "92-399",
    "swapInputAmount": "4999949999999650000",
    "swapOutputAmount": "4192904666034",
  },
  "swapEgress": {
    "amount": "4192707216034",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap in SENT status 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SENT",
  "swap": {
    "executedAt": 564000,
    "executedBlockIndex": "94-594",
    "fees": [
      {
        "amount": "4556242",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "4999949999999650",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "4506169",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "45516860",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "BROKER",
      },
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "197450000",
        "asset": "DOT",
        "chain": "Polkadot",
        "type": "EGRESS",
      },
    ],
    "isDca": false,
    "retryCount": 0,
    "scheduledAt": 552000,
    "scheduledBlockIndex": "92-399",
    "swapInputAmount": "4999949999999650000",
    "swapOutputAmount": "4192904666034",
  },
  "swapEgress": {
    "amount": "4192707216034",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
    "txRef": "0xdeadbeef",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap in SWAPPING status 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SWAPPING",
  "swap": {
    "fees": [
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
    ],
    "isDca": false,
    "retryCount": 0,
    "scheduledAt": 552000,
    "scheduledBlockIndex": "92-399",
    "swapInputAmount": "4999949999999650000",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap in SWAPPING status 2`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SWAPPING",
  "swap": {
    "executedAt": 564000,
    "executedBlockIndex": "94-594",
    "fees": [
      {
        "amount": "4556242",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "4999949999999650",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "4506169",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "45516860",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "BROKER",
      },
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
    ],
    "isDca": false,
    "retryCount": 0,
    "scheduledAt": 552000,
    "scheduledBlockIndex": "92-399",
    "swapInputAmount": "4999949999999650000",
    "swapOutputAmount": "4192904666034",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap in SWAPPING status with a tx ref 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
    "txRef": "0xa2d5df86c6ec123283eb052c598a0f4b650367a81ad141b9ff3adb0286a86c17",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SWAPPING",
  "swap": {
    "fees": [
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
    ],
    "isDca": false,
    "retryCount": 0,
    "scheduledAt": 552000,
    "scheduledBlockIndex": "92-399",
    "swapInputAmount": "4999949999999650000",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap with FillOrKillParams in COMPLETED 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "fillOrKillParams": {
      "minPrice": "29387358770557187699218413430556141945466.638919302188",
      "refundAddress": "0x541f563237a309b3a61e33bdf07a8930bdba8d99",
      "retryDurationBlocks": 15,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "refundEgress": {
    "amount": "999844999999160000",
    "confirmedAt": 624000,
    "confirmedBlockIndex": "104-7",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-594",
    "txRef": "0xd2398250c9fa869f0eb7659015549ed46178c95cedd444c3539f655068f6a7d9",
  },
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "COMPLETED",
  "swap": {
    "fees": [
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "105000000490000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "isDca": false,
    "retryCount": 0,
    "scheduledAt": 552000,
    "scheduledBlockIndex": "92-399",
    "swapInputAmount": "4999949999999650000",
  },
  "swapId": "368",
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap with a refund in SENDING status 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "fillOrKillParams": {
      "minPrice": "29387358770557187699218413430556141945466.638919302188",
      "refundAddress": "0x541f563237a309b3a61e33bdf07a8930bdba8d99",
      "retryDurationBlocks": 15,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "refundEgress": {
    "amount": "999844999999160000",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-594",
  },
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SENDING",
  "swap": {
    "fees": [
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "105000000490000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "isDca": false,
    "retryCount": 0,
    "scheduledAt": 552000,
    "scheduledBlockIndex": "92-399",
    "swapInputAmount": "4999949999999650000",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves mulitple DCA swaps in FAILED status if refund egress fails but swap completes 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "dcaParams": {
      "chunkIntervalBlocks": 3,
      "numberOfChunks": 10,
    },
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "fillOrKillParams": {
      "minPrice": "29387358770557187699218413430556141945466.638919302188",
      "refundAddress": "0x541f563237a309b3a61e33bdf07a8930bdba8d99",
      "retryDurationBlocks": 15,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "refundEgress": {
    "amount": "999844999999160000",
    "failedAt": 624000,
    "failedBlockIndex": "104-1",
    "failure": {
      "failedAt": 624000,
      "failedBlockIndex": "104-1",
      "mode": "REFUND_OUTPUT_TOO_SMALL",
      "reason": {
        "message": "The amount is below the minimum egress amount.",
        "name": "ethereumIngressEgress.BelowEgressDustLimit",
      },
    },
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-594",
  },
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "FAILED",
  "swap": {
    "allChunksExecuted": false,
    "currentChunk": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "fees": [
        {
          "amount": "9112484",
          "asset": "USDC",
          "chain": "Ethereum",
          "type": "NETWORK",
        },
        {
          "amount": "9999899999999300",
          "asset": "ETH",
          "chain": "Ethereum",
          "type": "LIQUIDITY",
        },
        {
          "amount": "9012338",
          "asset": "USDC",
          "chain": "Ethereum",
          "type": "LIQUIDITY",
        },
        {
          "amount": "91033720",
          "asset": "ETH",
          "chain": "Ethereum",
          "type": "BROKER",
        },
      ],
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
      "swapOutputAmount": "4192904666034",
    },
    "fees": [
      {
        "amount": "9112484",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "9999899999999300",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "9012338",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "91033720",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "BROKER",
      },
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "105000000490000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
      {
        "amount": "197450000",
        "asset": "DOT",
        "chain": "Polkadot",
        "type": "EGRESS",
      },
    ],
    "isDca": true,
    "lastExecutedChunk": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "fees": [
        {
          "amount": "4556242",
          "asset": "USDC",
          "chain": "Ethereum",
          "type": "NETWORK",
        },
        {
          "amount": "4999949999999650",
          "asset": "ETH",
          "chain": "Ethereum",
          "type": "LIQUIDITY",
        },
        {
          "amount": "4506169",
          "asset": "USDC",
          "chain": "Ethereum",
          "type": "LIQUIDITY",
        },
        {
          "amount": "45516860",
          "asset": "ETH",
          "chain": "Ethereum",
          "type": "BROKER",
        },
      ],
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
      "swapOutputAmount": "4192904666034",
    },
    "totalChunksExecuted": 2,
    "totalInputAmountSwapped": "9999899999999300000",
    "totalOutputAmountSwapped": "8385809332068",
  },
  "swapEgress": {
    "amount": "4192707216034",
    "confirmedAt": 624000,
    "confirmedBlockIndex": "104-7",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
    "txRef": "104-2",
  },
}
`;
